Change about text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                     <!-- LOGO -->
                     <a href="#home" class="navbar-brand">
-                         <div class="navbar-logo" ></div>
+                         <div class="navbar-logo"></div>
                     </a>
                </div>
 
@@ -82,21 +82,39 @@
                     </div>
 
                     <div class="col-md-12 col-sm-6">
-                         <p>  Proiectul Skip To The Future, este un proiect care își propune să le ofere elevilor din Sibiu șansa de a experimenta procesul de dezvoltare a soluțiilor software și hardware din perspectiva unui inginer.
-                              Participanții vor afla aceste lucruri de la persoane care și-au dedicat timpul în realizarea unei cariere în acest domeniu. Dorința noastră este de a le arăta un posibil viitor; a ceea ce vor face dacă aleg să urmeze această carieră.</br>
-                         </br>
-                              Proiectul se adresează atât celor nehotărâți, cât și celor care sunt curioși referitor la ceea ce ar însemna o astfel de meserie.</br> 
-                              În prima fază, elevii vor avea ocazia să afle mai multe informaţii despre diferite companii implicate în acest proiect. Acestea îşi vor prezenta firma şi vor lămuri toate neclarităţile într-o sesiune de Q&A.</br>
-                              În faza a doua, în funcţie de compania aleasă, elevii vor avea şansa să participe la dezvoltarea unui proiect aflat în producţie.</br>
-                              Toate aceste etape, vor avea ca scop final să-i ghideze pe elevii să găsească un răspuns mai bun la marea întrebare: “Ce facultate ar trebui să urmez?”</p>
-                            
-                              <div class="col-md-12 col-sm-12">
-                                   <div class="section-title">
-                                        <h1>Etapele proiectului</h1>
-                                   </div>
+
+                         <p>
+                              Proiectul SkipToTheFuture este un proiect care își propune să le ofere elevilor din Sibiu
+                              șansa de a vedea care este procesul de
+                              dezvoltare a soluțiilor software și hardware din perspectiva unui inginer.
+                              Participanții vor afla aceste lucruri de la persoane care și-au dedicat timpul în
+                              realizarea unei cariere în acest domeniu.
+                              Dorința noastră este de a le arăta un posibil viitor; a ceea ce vor face dacă aleg să
+                              urmeze această carieră.</p>
+                         <br>
+                         <p>
+                              Proiectul se adresează atât celor nehotărâți, cât și celor care sunt curioși referitor la
+                              ceea ce ar însemna o astfel de meserie.</p>
+                         <br>
+                         <p>
+                              În prima fază, elevii vor avea ocazia să afle mai multe informaţii despre diferite
+                              companii implicate în acest proiect.
+                              Acestea îşi vor prezenta firma şi vor fi acolo pentru a lămuri toate neclarităţile într-o
+                              sesiune de Q&A (întrebări și răspunsuri).</p>
+                         <br>
+                         <p>
+                              În faza a doua, în funcţie de compania aleasă, elevii vor avea şansa să participe la
+                              dezvoltarea unui proiect aflat în producţie.
+                              Toate aceste etape, vor avea ca scop final, să-i ajute pe elevii să găsească un răspuns
+                              mai bun la marea întrebare:“Ce facultate ar trebui să urmez?”</p>
+
+                         <div class="col-md-12 col-sm-12">
+                              <div class="section-title">
+                                   <h1>Etapele proiectului</h1>
                               </div>
-                              <div class="img-responsive timeline-image"></div>
-                    </div> 
+                         </div>
+                         <div class="img-responsive timeline-image"></div>
+                    </div>
 
                     <!-- <div class="col-md-6 col-sm-6">
                          <div class="feature-image">
@@ -124,8 +142,10 @@
                               <div class="team-thumb">
                                    <img src="images/web-logo-agile-full.png" class="img-responsive" alt="AgileFreaks">
                                    <div class="team-info team-thumb-up">
-                                        <p>Construim instrumente bine lucrate, care rezultă într-o plăcere de a le folosi, 
-                                             astfel încât clienții noștri își pot dezvolta afacerea într-un mod sustenabil. 
+                                        <p>Construim instrumente bine lucrate, care rezultă într-o plăcere de a le
+                                             folosi,
+                                             astfel încât clienții noștri își pot dezvolta afacerea într-un mod
+                                             sustenabil.
                                         </p>
                                    </div>
                               </div>
@@ -137,7 +157,8 @@
                                    <img src="images/logo-conti-web.png" class="img-responsive" alt="Continental">
 
                                    <div class="team-info team-thumb-up">
-                                        <p>Continental dezvoltă tehnologii și servicii de pionierat pentru mobilitatea durabilă și conectată a oamenilor și a bunurilor lor.</p>
+                                        <p>Continental dezvoltă tehnologii și servicii de pionierat pentru mobilitatea
+                                             durabilă și conectată a oamenilor și a bunurilor lor.</p>
                                    </div>
                               </div>
                          </div>
@@ -149,7 +170,9 @@
                                    <img src="images/logo-ntt-web.png" class="img-responsive" alt="NTT DATA">
                                    <div class="team-info team-thumb-up">
                                         <p>
-                                        Oferim asistență pentru dezvoltare și consultanță pentru clienți din diverse industrii, furnizori de servicii IT, integratori de sisteme și companii de software.</p>
+                                             Oferim asistență pentru dezvoltare și consultanță pentru clienți din
+                                             diverse industrii, furnizori de servicii IT, integratori de sisteme și
+                                             companii de software.</p>
                                    </div>
                               </div>
                          </div>
@@ -173,8 +196,11 @@
 
                               <div class="owl-carousel owl-t     me">
                                    <div class="item">
-                                        <h3>A fost o experiență foarte placută. Chiar lucrez în domeniu după 5 ani. Dacă ar fii să dau un feedback, aș zice că mi-a plăcut mult mediul de lucru și oamenii. 
-                                             Chiar aș face internshipul mai lung pentru a învăța mai multe. Also la Skip To The Future e prima oară când am auzit de metodologii agile.
+                                        <h3>A fost o experiență foarte placută. Chiar lucrez în domeniu după 5 ani. Dacă
+                                             ar fii să dau un feedback, aș zice că mi-a plăcut mult mediul de lucru și
+                                             oamenii.
+                                             Chiar aș face internshipul mai lung pentru a învăța mai multe. Also la Skip
+                                             To The Future e prima oară când am auzit de metodologii agile.
                                         </h3>
                                         <div class="testimonial-item">
                                              <img src="images/boy1-01.png" class="img-responsive" alt="Tudor">
@@ -183,8 +209,13 @@
                                    </div>
 
                                    <div class="item">
-                                        <h3>A fost interesant deoarece a fost primul meu contact cu o firmă IT. Acum sunt studentă la Universitatea Tehnică din Viena, la facultatatea de Informartică - profilul Inginerie Software și lucrez tot în domeniu ca Inginer proiect pe partea de networks și virtualizare.
-                                             Pot să subliniez faptul că mediul și oamenii de la Agile Freaks au fost foarte plăcuți. Eu m-am simțit bine în perioada aceea și mi-aș fi dorit să dureze mai mult.</h3>
+                                        <h3>A fost interesant deoarece a fost primul meu contact cu o firmă IT. Acum
+                                             sunt studentă la Universitatea Tehnică din Viena, la facultatatea de
+                                             Informartică - profilul Inginerie Software și lucrez tot în domeniu ca
+                                             Inginer proiect pe partea de networks și virtualizare.
+                                             Pot să subliniez faptul că mediul și oamenii de la Agile Freaks au fost
+                                             foarte plăcuți. Eu m-am simțit bine în perioada aceea și mi-aș fi dorit să
+                                             dureze mai mult.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/fata1-01.png" class="img-responsive" alt="Iulia">
                                              <h4>Iulia R.</h4>
@@ -192,8 +223,11 @@
                                    </div>
 
                                    <div class="item">
-                                        <h3>A fost o experiență ok, face parte din formarea mea profesională de “programator în progres” de acum. În prezent sunt student în anul 3 la Automatica si Calculatoare in Cluj, specializarea Calculatoar.
-                                             Momentan lucrez la NTT Data pe SAP ABAP, dar am făcut alte internship-uri și pe Automation Testing în Python și Android Development.</h3>
+                                        <h3>A fost o experiență ok, face parte din formarea mea profesională de
+                                             “programator în progres” de acum. În prezent sunt student în anul 3 la
+                                             Automatica si Calculatoare in Cluj, specializarea Calculatoar.
+                                             Momentan lucrez la NTT Data pe SAP ABAP, dar am făcut alte internship-uri
+                                             și pe Automation Testing în Python și Android Development.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/boy2-01.png" class="img-responsive" alt="Adi">
                                              <h4>Adi F.</h4>
@@ -201,8 +235,16 @@
                                    </div>
 
                                    <div class="item">
-                                        <h3>Mă bucur că vreți să reluați proiectul. Sincer, aceste trei zile petrecute cu voi m-au motivat mai tare să urmez o carieră în IT așa că înainte de BAC și în acea vară am lucrat ca și freelancer. De asemenea, în clasa a 12-a am luat locul doi pe țară la olimpiada de C#. Am urmat Facultatea de Informatică la UBB Cluj, în același timp fiind și student pentru un an la Academy+Plus. În prezent, sunt la ComplyAdvantage unde lucrez cu Scala și Apache Flink în general.
-                                             Vreau să vă mulțumesc pentru că m-ați ales să fiu parte din proiect și eu sfătuiesc să îl reluați pentru că vă puteți pune amprenta pe cariera multor elevi sibieni.</h3>
+                                        <h3>Mă bucur că vreți să reluați proiectul. Sincer, aceste trei zile petrecute
+                                             cu voi m-au motivat mai tare să urmez o carieră în IT așa că înainte de BAC
+                                             și în acea vară am lucrat ca și freelancer. De asemenea, în clasa a 12-a am
+                                             luat locul doi pe țară la olimpiada de C#. Am urmat Facultatea de
+                                             Informatică la UBB Cluj, în același timp fiind și student pentru un an la
+                                             Academy+Plus. În prezent, sunt la ComplyAdvantage unde lucrez cu Scala și
+                                             Apache Flink în general.
+                                             Vreau să vă mulțumesc pentru că m-ați ales să fiu parte din proiect și eu
+                                             sfătuiesc să îl reluați pentru că vă puteți pune amprenta pe cariera multor
+                                             elevi sibieni.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/fata2-01.png" class="img-responsive" alt="Ana">
                                              <h4>Ana P.</h4>
@@ -210,8 +252,12 @@
                                    </div>
 
                                    <div class="item">
-                                        <h3>Am participat la Skip to the Future la finalul clasei a 12-a când eram deja admisă la Inginerie. Dar asta nu înseamnă că nu m-a ajutat, ba dimpotrivă, m-a făcut să îmi dau seama că alegerea pe care am făcut-o alegând să urmez Ingineria a fost una bună și m-am convins că nu o să regret asta. 
-                                             Și pe lângă asta, atunci am fost la Continental și am văzut cum se lucrează acolo, iar acum am ajuns să lucrez și eu tot la Continental.</h3>
+                                        <h3>Am participat la Skip to the Future la finalul clasei a 12-a când eram deja
+                                             admisă la Inginerie. Dar asta nu înseamnă că nu m-a ajutat, ba dimpotrivă,
+                                             m-a făcut să îmi dau seama că alegerea pe care am făcut-o alegând să urmez
+                                             Ingineria a fost una bună și m-am convins că nu o să regret asta.
+                                             Și pe lângă asta, atunci am fost la Continental și am văzut cum se lucrează
+                                             acolo, iar acum am ajuns să lucrez și eu tot la Continental.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/boy3-01.png" class="img-responsive" alt="Alex">
                                              <h4>Alex V.</h4>
@@ -244,7 +290,8 @@
                                    <h2>Elev</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>Înscrie-te acum și vei beneficia de cea mai frumoasă experiență din viața ta de elev. Vei putea lucra cu persoane cu adevărat profesioniste
+                                   <p>Înscrie-te acum și vei beneficia de cea mai frumoasă experiență din viața ta de
+                                        elev. Vei putea lucra cu persoane cu adevărat profesioniste
                                         la produse folosite în lumea reală. Nu rata această ocazie, alătură-te acum.
                                    </p>
                               </div>
@@ -253,14 +300,16 @@
                               </div>
                          </div>
                     </div>
-          
+
                     <div class="col-md-6 col-sm-6">
                          <div class="pricing-thumb">
                               <div class="pricing-title">
                                    <h2>Partener</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>Știm că sunt vremuri grele din puct de vedere al recrutării în Sibiu. Din puctul nostru de vedere cea mai bună variantă ar fi să investim cât mai devreme în educația copiilor, doar astfel putem construi un viitor sustenabil.
+                                   <p>Știm că sunt vremuri grele din puct de vedere al recrutării în Sibiu. Din puctul
+                                        nostru de vedere cea mai bună variantă ar fi să investim cât mai devreme în
+                                        educația copiilor, doar astfel putem construi un viitor sustenabil.
                                         Aplică acum și arată-le elevilor ce face compania ta.
                                    </p>
                               </div>
@@ -281,7 +330,8 @@
 
                     <div class="copyright-text col-md-12 col-sm-12">
                          <div class="col-md-6 col-sm-6">
-                              <p>Email: <a href="mailto:marketing@skiptothefuture.com" target="_top">marketing@skiptothefuture.com</a> </p>
+                              <p>Email: <a href="mailto:marketing@skiptothefuture.com"
+                                        target="_top">marketing@skiptothefuture.com</a> </p>
                          </div>
 
                          <div class="col-md-6 col-sm-6">
