Check for misspellings

--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
                                    </div>
 
                                    <div class="item">
-                                        <h3>A fost interesant deoarece a fost primul meu contact cu o firmă IT. Acum
+                                        <h3>Am fost interesant deoarece a fost primul meu contact cu o firmă IT. Acum
                                              sunt studentă la Universitatea Tehnică din Viena, la facultatatea de
-                                             Informartică - profilul Inginerie Software și lucrez tot în domeniu ca
+                                             Informatică - profilul Inginerie Software și lucrez tot în domeniu ca
                                              Inginer proiect pe partea de networks și virtualizare.
                                              Pot să subliniez faptul că mediul și oamenii de la Agile Freaks au fost
                                              foarte plăcuți. Eu m-am simțit bine în perioada aceea și mi-aș fi dorit să
@@ -225,7 +225,7 @@
                                    <div class="item">
                                         <h3>A fost o experiență ok, face parte din formarea mea profesională de
                                              “programator în progres” de acum. În prezent sunt student în anul 3 la
-                                             Automatica si Calculatoare in Cluj, specializarea Calculatoar.
+                                             Automatică şi Calculatoare in Cluj, specializarea Calculatoare.
                                              Momentan lucrez la NTT Data pe SAP ABAP, dar am făcut alte internship-uri
                                              și pe Automation Testing în Python și Android Development.</h3>
                                         <div class="testimonial-item">
@@ -247,7 +247,7 @@
                                              elevi sibieni.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/fata2-01.png" class="img-responsive" alt="Ana">
-                                             <h4>Ana P.</h4>
+                                             <h4>Alex V.</h4>
                                         </div>
                                    </div>
 
@@ -260,9 +260,11 @@
                                              acolo, iar acum am ajuns să lucrez și eu tot la Continental.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/boy3-01.png" class="img-responsive" alt="Alex">
-                                             <h4>Alex V.</h4>
+                                             <h4>Maria A.</h4>
                                         </div>
                                    </div>
+
+                                   <!-- @TODO: Missing feedback from Ana?  -->
                               </div>
 
                          </div>
@@ -307,9 +309,9 @@
                                    <h2>Partener</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>Știm că sunt vremuri grele din puct de vedere al recrutării în Sibiu. Din puctul
+                                   <p>Știm că sunt vremuri grele din punct de vedere al recrutării în Sibiu. Din punctul
                                         nostru de vedere cea mai bună variantă ar fi să investim cât mai devreme în
-                                        educația copiilor, doar astfel putem construi un viitor sustenabil.
+                                        educația elevilor, astfel încât să putem construi un viitor sustenabil.
                                         Aplică acum și arată-le elevilor ce face compania ta.
                                    </p>
                               </div>
