--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
      </section>
 
 
-     <!-- FEATURE -->
+     <!-- ABOUT -->
      <section id="feature" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
@@ -84,7 +84,7 @@
                     <div class="col-md-12 col-sm-6">
 
                          <p>
-                              Proiectul SkipToTheFuture este un proiect care își propune să le ofere elevilor din Sibiu
+                              Proiectul Skip To The Future este un proiect care își propune să le ofere elevilor din Sibiu
                               șansa de a vedea care este procesul de
                               dezvoltare a soluțiilor software și hardware din perspectiva unui inginer.
                               Participanții vor afla aceste lucruri de la persoane care și-au dedicat timpul în
@@ -127,7 +127,7 @@
      </section>
 
 
-     <!-- ABOUT -->
+     <!-- PARTENERS -->
      <section id="about" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row companies">
@@ -275,7 +275,7 @@
      </section>
 
 
-     <!-- PRICING -->
+     <!-- APPLY -->
      <section id="pricing" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
