Text improvements (v1) for apply section

--- a/index.html
+++ b/index.html
@@ -289,12 +289,16 @@
                     <div class="col-md-6 col-sm-6">
                          <div class="pricing-thumb">
                               <div class="pricing-title">
-                                   <h2>Elev</h2>
+                                   <h2>Participant</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>Înscrie-te acum și vei beneficia de cea mai frumoasă experiență din viața ta de
-                                        elev. Vei putea lucra cu persoane cu adevărat profesioniste
-                                        la produse folosite în lumea reală. Nu rata această ocazie, alătură-te acum.
+                                   <p>
+                                        Eşti indecis de ce facultate să urmezi?  
+                                        <br>
+                                        Înscrie-te acum pentru a participa la acest proiect şi vei putea lucra alături de persoane profesioniste
+                                        la produse folosite în lumea reală. 
+                                        <br>
+                                        Nu rata această ocazie, alătură-te acum.
                                    </p>
                               </div>
                               <div class="pricing-bottom">
@@ -309,10 +313,13 @@
                                    <h2>Partener</h2>
                               </div>
                               <div class="pricing-info">
-                                   <p>Știm că sunt vremuri grele din punct de vedere al recrutării în Sibiu. Din punctul
-                                        nostru de vedere cea mai bună variantă ar fi să investim cât mai devreme în
-                                        educația elevilor, astfel încât să putem construi un viitor sustenabil.
-                                        Aplică acum și arată-le elevilor ce face compania ta.
+                                   <p>
+                                        Vrei să ne ajuţi să construim un viitor sustenabil?
+                                        <br>
+                                        Noi considerăm că niciodată nu e prea devreme să investeşti în educație.
+                                        Alătură-te nouă şi oferă şansa elevilor să vadă ce face compania ta.
+                                        <br>
+                                        Împreună construim un viitor mai bun!
                                    </p>
                               </div>
                               <div class="pricing-bottom">
