Add missing testimonial & fix text

--- a/index.html
+++ b/index.html
@@ -191,16 +191,37 @@
                          <div class="testimonial-info">
 
                               <div class="section-title">
-                                   <h1>Testimonials</h1>
+                                   <h1>Din experiențele trecute</h1>
                               </div>
 
-                              <div class="owl-carousel owl-t     me">
+                              <div class="owl-carousel owl-t me">
                                    <div class="item">
-                                        <h3>A fost o experiență foarte placută. Chiar lucrez în domeniu după 5 ani. Dacă
-                                             ar fii să dau un feedback, aș zice că mi-a plăcut mult mediul de lucru și
-                                             oamenii.
-                                             Chiar aș face internshipul mai lung pentru a învăța mai multe. Also la Skip
-                                             To The Future e prima oară când am auzit de metodologii agile.
+                                        <h3>A fost o experiență ok, face parte din formarea mea profesională de “programator în progres” de acum. 
+                                             În prezent sunt student în anul 3 la Automatica si Calculatoare in Cluj, specializarea Calculatoare.
+                                             Momentan lucrez la NTT Data pe SAP ABAP, dar am făcut alte internship-uri și pe Automation Testing 
+                                             în Python și Android Development.</h3>
+                                        <div class="testimonial-item">
+                                             <img src="images/boy2-01.png" class="img-responsive" alt="Adi">
+                                             <h4>Adi F.</h4>
+                                        </div>
+                                   </div>
+
+                                   <div class="item">
+                                        <h3>A fost interesant deoarece a fost primul meu contact cu o firmă IT. Acum sunt studentă la Universitatea Tehnică din Viena,
+                                             la Facultatatea de Informatică - profilul Inginerie Software și lucrez tot în domeniu ca Inginer proiect pe partea de 
+                                             networks și virtualizare.
+                                             Pot să subliniez faptul că mediul și oamenii de la Agile Freaks au fost foarte plăcuți. Eu m-am simțit bine în perioada 
+                                             aceea și mi-aș fi dorit să dureze mai mult.</h3>
+                                        <div class="testimonial-item">
+                                             <img src="images/fata1-01.png" class="img-responsive" alt="Iulia">
+                                             <h4>Iulia R.</h4>
+                                        </div>
+                                   </div>
+
+                                   <div class="item">
+                                        <h3>A fost o experiență foarte placută. Chiar lucrez în domeniu după 5 ani. Dacă ar fii să dau un feedback,
+                                             aș zice că mi-a plăcut mult mediul de lucru și oamenii. Chiar aș face internshipul mai lung pentru a învăța mai multe. 
+                                             Also la Skip To The Future e prima oară când am auzit de metodologii agile.
                                         </h3>
                                         <div class="testimonial-item">
                                              <img src="images/boy1-01.png" class="img-responsive" alt="Tudor">
@@ -209,42 +230,10 @@
                                    </div>
 
                                    <div class="item">
-                                        <h3>Am fost interesant deoarece a fost primul meu contact cu o firmă IT. Acum
-                                             sunt studentă la Universitatea Tehnică din Viena, la facultatatea de
-                                             Informatică - profilul Inginerie Software și lucrez tot în domeniu ca
-                                             Inginer proiect pe partea de networks și virtualizare.
-                                             Pot să subliniez faptul că mediul și oamenii de la Agile Freaks au fost
-                                             foarte plăcuți. Eu m-am simțit bine în perioada aceea și mi-aș fi dorit să
-                                             dureze mai mult.</h3>
-                                        <div class="testimonial-item">
-                                             <img src="images/fata1-01.png" class="img-responsive" alt="Iulia">
-                                             <h4>Iulia R.</h4>
-                                        </div>
-                                   </div>
-
-                                   <div class="item">
-                                        <h3>A fost o experiență ok, face parte din formarea mea profesională de
-                                             “programator în progres” de acum. În prezent sunt student în anul 3 la
-                                             Automatică şi Calculatoare in Cluj, specializarea Calculatoare.
-                                             Momentan lucrez la NTT Data pe SAP ABAP, dar am făcut alte internship-uri
-                                             și pe Automation Testing în Python și Android Development.</h3>
-                                        <div class="testimonial-item">
-                                             <img src="images/boy2-01.png" class="img-responsive" alt="Adi">
-                                             <h4>Adi F.</h4>
-                                        </div>
-                                   </div>
-
-                                   <div class="item">
-                                        <h3>Mă bucur că vreți să reluați proiectul. Sincer, aceste trei zile petrecute
-                                             cu voi m-au motivat mai tare să urmez o carieră în IT așa că înainte de BAC
-                                             și în acea vară am lucrat ca și freelancer. De asemenea, în clasa a 12-a am
-                                             luat locul doi pe țară la olimpiada de C#. Am urmat Facultatea de
-                                             Informatică la UBB Cluj, în același timp fiind și student pentru un an la
-                                             Academy+Plus. În prezent, sunt la ComplyAdvantage unde lucrez cu Scala și
-                                             Apache Flink în general.
-                                             Vreau să vă mulțumesc pentru că m-ați ales să fiu parte din proiect și eu
-                                             sfătuiesc să îl reluați pentru că vă puteți pune amprenta pe cariera multor
-                                             elevi sibieni.</h3>
+                                        <h3>Mă bucur mult că aţi decis să faceţi iar proiectul şi aţi mărit numărul de elevi. Ar trebui să existe cât mai multe proiecte
+                                             de genul, pentru că ce învăţăm în liceu şi chiar şi în facultate/master nu e de ajus pentru o carieră, practica e foarte
+                                             diferită faţă de teorie. Iar ca elev de liceu să ai oportunitatea să vezi efectiv ce se întâmplă într-o firmă mi se pare
+                                             foarte folositor. Vă doresc multă baftă cu proiectul, sunt sigură ca o sa fie mulţi elevi interesaţi şi sper să fie un succes.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/fata2-01.png" class="img-responsive" alt="Ana">
                                              <h4>Alex V.</h4>
@@ -252,19 +241,28 @@
                                    </div>
 
                                    <div class="item">
-                                        <h3>Am participat la Skip to the Future la finalul clasei a 12-a când eram deja
-                                             admisă la Inginerie. Dar asta nu înseamnă că nu m-a ajutat, ba dimpotrivă,
-                                             m-a făcut să îmi dau seama că alegerea pe care am făcut-o alegând să urmez
-                                             Ingineria a fost una bună și m-am convins că nu o să regret asta.
-                                             Și pe lângă asta, atunci am fost la Continental și am văzut cum se lucrează
-                                             acolo, iar acum am ajuns să lucrez și eu tot la Continental.</h3>
+                                        <h3>Mă bucur că vreți să reluați proiectul. Sincer, aceste trei zile petrecute cu voi m-au motivat mai tare să urmez 
+                                             o carieră în IT așa că înainte de BAC și în acea vară am lucrat ca și freelancer. De asemenea, în clasa a 12-a 
+                                             am luat locul doi pe țară la olimpiadă de C#. Am urmat Facultatea de Informatică la UBB Cluj, în același timp
+                                             fiind și student pentru un an la Academy+Plus. În prezent, sunt la ComplyAdvantage unde lucrez cu Scala și
+                                             Apache Flink în general. Vreau să vă mulțumesc pentru că m-ați ales să fiu parte din proiect și eu sfătuiesc să îl
+                                             reluați pentru că vă puteți pune amprenta pe cariera multor elevi sibieni.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/boy3-01.png" class="img-responsive" alt="Alex">
                                              <h4>Maria A.</h4>
                                         </div>
                                    </div>
 
-                                   <!-- @TODO: Missing feedback from Ana?  -->
+                                   <div class="item">
+                                        <h3>Am participat la Skip to the Future la finalul clasei a 12-a când eram deja admisă la Inginerie.
+                                             Dar asta nu înseamnă că nu m-a ajutat, ba dimpotrivă, m-a făcut să îmi dau seama că alegerea pe care am făcut-o 
+                                             alegând să urmez Ingineria a fost una bună și m-am convins că nu o să regret asta. Și pe lângă asta,
+                                             atunci am fost la Continental și am văzut cum se lucrează acolo, iar acum am ajuns să lucrez și eu tot la Continental.</h3>
+                                        <div class="testimonial-item">
+                                             <img src="images/boy3-01.png" class="img-responsive" alt="Alex">
+                                             <h4>Maria A.</h4>
+                                        </div>
+                                   </div>
                               </div>
 
                          </div>
