--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                               <div class="owl-carousel owl-t me">
                                    <div class="item">
                                         <h3>A fost o experiență ok, face parte din formarea mea profesională de “programator în progres” de acum. 
-                                             În prezent sunt student în anul 3 la Automatica si Calculatoare in Cluj, specializarea Calculatoare.
+                                             În prezent sunt student în anul 3 la Automatică şi Calculatoare în Cluj, specializarea Calculatoare.
                                              Momentan lucrez la NTT Data pe SAP ABAP, dar am făcut alte internship-uri și pe Automation Testing 
                                              în Python și Android Development.</h3>
                                         <div class="testimonial-item">
@@ -219,7 +219,7 @@
                                    </div>
 
                                    <div class="item">
-                                        <h3>A fost o experiență foarte placută. Chiar lucrez în domeniu după 5 ani. Dacă ar fii să dau un feedback,
+                                        <h3>A fost o experiență foarte placută. Chiar lucrez în domeniu după 5 ani. Dacă ar fi să dau un feedback,
                                              aș zice că mi-a plăcut mult mediul de lucru și oamenii. Chiar aș face internshipul mai lung pentru a învăța mai multe. 
                                              Also la Skip To The Future e prima oară când am auzit de metodologii agile.
                                         </h3>
@@ -233,7 +233,7 @@
                                         <h3>Mă bucur mult că aţi decis să faceţi iar proiectul şi aţi mărit numărul de elevi. Ar trebui să existe cât mai multe proiecte
                                              de genul, pentru că ce învăţăm în liceu şi chiar şi în facultate/master nu e de ajus pentru o carieră, practica e foarte
                                              diferită faţă de teorie. Iar ca elev de liceu să ai oportunitatea să vezi efectiv ce se întâmplă într-o firmă mi se pare
-                                             foarte folositor. Vă doresc multă baftă cu proiectul, sunt sigură ca o sa fie mulţi elevi interesaţi şi sper să fie un succes.</h3>
+                                             foarte folositor. Vă doresc multă baftă cu proiectul, sunt sigură că o să fie mulţi elevi interesaţi şi sper să fie un succes.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/fata2-01.png" class="img-responsive" alt="Ana">
                                              <h4>Alex V.</h4>
